--- a/pages/style.css
+++ b/pages/style.css
@@ -1,25 +1,25 @@
 :root {
   --dl-color-gray-500: #595959;
   --dl-color-gray-700: #999999;
-  --dl-color-gray-900: #D9D9D9;
+  --dl-color-gray-900: #d9d9d9;
   --dl-size-size-large: 144px;
   --dl-size-size-small: 48px;
-  --dl-color-danger-300: #A22020;
-  --dl-color-danger-500: #BF2626;
-  --dl-color-danger-700: #E14747;
+  --dl-color-danger-300: #a22020;
+  --dl-color-danger-500: #bf2626;
+  --dl-color-danger-700: #e14747;
   --dl-color-gray-black: #000000;
-  --dl-color-gray-white: #FFFFFF;
+  --dl-color-gray-white: #ffffff;
   --dl-size-size-medium: 96px;
   --dl-size-size-xlarge: 192px;
   --dl-size-size-xsmall: 16px;
   --dl-space-space-unit: 16px;
-  --dl-color-primary-100: #003EB3;
-  --dl-color-primary-300: #0074F0;
-  --dl-color-primary-500: #14A9FF;
-  --dl-color-primary-700: #85DCFF;
+  --dl-color-primary-100: #003eb3;
+  --dl-color-primary-300: #0074f0;
+  --dl-color-primary-500: #14a9ff;
+  --dl-color-primary-700: #85dcff;
   --dl-color-success-300: #199033;
-  --dl-color-success-500: #32A94C;
-  --dl-color-success-700: #4CC366;
+  --dl-color-success-500: #32a94c;
+  --dl-color-success-700: #4cc366;
   --dl-size-size-xxlarge: 288px;
   --dl-size-size-maxwidth: 1400px;
   --dl-radius-radius-round: 50%;
@@ -35,7 +35,7 @@
   --dl-space-space-oneandhalfunits: 24px;
 }
 button {
-  cursor:pointer;
+  cursor: pointer;
 }
 .button {
   color: var(--dl-color-gray-black);
@@ -167,7 +167,7 @@ button {
   font-size: 22px;
   align-self: stretch;
   max-height: 50px;
-  min-height: 50PX;
+  min-height: 50px;
   font-family: Satoshi;
   font-weight: 500;
   line-height: 1.15;
@@ -185,7 +185,7 @@ button {
   font-weight: 700;
   padding-top: 10px;
   border-radius: 10px;
-  padding-bottom:10px;
+  padding-bottom: 10px;
 }
 .team-pic {
   width: auto;
@@ -217,12 +217,12 @@ button {
   text-decoration: none;
 }
 
-@media(max-width: 991px) {
+@media (max-width: 991px) {
   .H1 {
     text-align: center;
   }
 }
-@media(max-width: 767px) {
+@media (max-width: 767px) {
   .nav-link {
     margin-left: 0;
     margin-bottom: var(--dl-space-space-unit);
@@ -231,42 +231,42 @@ button {
 
 @font-face {
   font-family: Satoshi;
-  src: url('../fonts/Satoshi-Black.ttf');
+  src: url("../fonts/Satoshi-Black.ttf");
   font-style: normal;
   font-weight: 900;
 }
 
 @font-face {
   font-family: Satoshi;
-  src: url('../fonts/Satoshi-Bold.ttf');
+  src: url("../fonts/Satoshi-Bold.ttf");
   font-style: normal;
   font-weight: 700;
 }
 
 @font-face {
   font-family: Satoshi;
-  src: url('../fonts/Satoshi-Italic.ttf');
+  src: url("../fonts/Satoshi-Italic.ttf");
   font-style: italic;
   font-weight: normal;
 }
 
 @font-face {
   font-family: Satoshi;
-  src: url('../fonts/Satoshi-Light.ttf');
+  src: url("../fonts/Satoshi-Light.ttf");
   font-style: normal;
   font-weight: 300;
 }
 
 @font-face {
   font-family: Satoshi;
-  src: url('../fonts/Satoshi-Medium.ttf');
+  src: url("../fonts/Satoshi-Medium.ttf");
   font-style: normal;
   font-weight: 500;
 }
 
 @font-face {
   font-family: Satoshi;
-  src: url('../fonts/Satoshi-Regular.ttf');
+  src: url("../fonts/Satoshi-Regular.ttf");
   font-style: normal;
   font-weight: 400;
 }
